# geomtry-demos

benchmark-bspline-surface-fitting/: CMakeLists.txt  README.md  demo.py  main.cpp  points.csv
